--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" type="text/css" href="style.css">
+<link rel="icon" type="image/x-icon" href="assets/favicon.png">
 <title>Notre Foyer</title>
 </head>
 
