chester mosaic background

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
-    <h1 id="home-banner">ヽ(｀Д´)ﾉ<br><br><span class="label">Notre Foyer</span> n'est pas encore prêt!</h1>
+    <div id="home-banner">
+    <h1 id="banner-text">ヽ(｀Д´)ﾉ<br><br><span class="label">Notre Foyer</span> n'est pas encore prêt!</h1>
+    </div>
 </body>
 </html>
