uncomment dishes fix

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
         </div>
     </div>
-    <!-- <div id="dishes">
+    <div id="dishes">
         <div><img src="assets/obstacles/dishes.png" alt=""></div>
         <div><img src="assets/obstacles/glasses.png" alt=""></div>
         <div><img src="assets/obstacles/large.png" alt=""></div>
@@ -56,7 +56,7 @@
         <div><img src="assets/obstacles/large.png" alt=""></div>
         <div><img src="assets/obstacles/oil.png" alt=""></div>
         <div><img src="assets/obstacles/large.png" alt=""></div>
-    </div> -->
+    </div>
 </body>
 
 <script>
