--- a/index.html
+++ b/index.html
@@ -34,28 +34,50 @@
             </div>
             <div id="message">
                 <h2>Pigeon Runner</h2>
-                <p>You're a friendly pigeon exploring the ACEF campus</p>
-                <p>Careful to avoid all the dirty dishes...</p>
+                <p>Tu es un jeune pigeon qui découvre le campus ACEF</p>
+                <p>Attention d'éviter la vaisselle salle... <br> et le fantôme de Chester</p>
             </div>
         </div>
     </div>
+    <div id="chester-wrapper">
+        <div id="chester">
+            <img id="chester-img" src="assets/pigeon/chester.gif" alt="">
+        </div>
+    </div>
     <div id="dishes">
-        <div><img src="assets/obstacles/dishes.png" alt=""></div>
-        <div><img src="assets/obstacles/glasses.png" alt=""></div>
-        <div><img src="assets/obstacles/large.png" alt=""></div>
-        <div><img src="assets/obstacles/oil.png" alt=""></div>
-        <div><img src="assets/obstacles/glasses.png" alt=""></div>
-        <div><img src="assets/obstacles/dishes.png" alt=""></div>
-        <div><img src="assets/obstacles/oil.png" alt=""></div>
-        <div><img src="assets/obstacles/large.png" alt=""></div>
-        <div><img src="assets/obstacles/dishes.png" alt=""></div>
-        <div><img src="assets/obstacles/glasses.png" alt=""></div>
-        <div><img src="assets/obstacles/oil.png" alt=""></div>
-        <div><img src="assets/obstacles/glasses.png" alt=""></div>
-        <div><img src="assets/obstacles/dishes.png" alt=""></div>
-        <div><img src="assets/obstacles/large.png" alt=""></div>
-        <div><img src="assets/obstacles/oil.png" alt=""></div>
-        <div><img src="assets/obstacles/large.png" alt=""></div>
+        <div>
+            <div><img src="assets/obstacles/dishes.png" alt="" class="w50"></div>
+            <div><img src="assets/obstacles/glasses.png" alt="" class="w25"></div>
+            <div><img src="assets/obstacles/large.png" alt="" class="w75"></div>
+            <div><img src="assets/obstacles/glass.png" alt="" class="w18"></div>
+            <div><img src="assets/obstacles/oil.png" alt="" class="w25"></div>
+        </div>
+
+        <div class="medium-dishes">
+            <div><img src="assets/obstacles/large.png" alt="" class="w75"></div>
+            <div><img src="assets/obstacles/dishes.png" alt="" class="w50"></div>
+            <div><img src="assets/obstacles/glass.png" alt="" class="w18"></div>
+            <div><img src="assets/obstacles/oil.png" alt="" class="w25"></div>
+            <div><img src="assets/obstacles/glasses.png" alt="" class="w25"></div>
+            <div><img src="assets/obstacles/large.png" alt="" class="w75"></div>
+        </div>
+
+        <div class="large-dishes">
+            <div><img src="assets/obstacles/oil.png" alt="" class="w25"></div>
+            <div><img src="assets/obstacles/dishes.png" alt="" class="w50"></div>
+            <div><img src="assets/obstacles/glass.png" alt="" class="w18"></div>
+            <div><img src="assets/obstacles/large.png" alt="" class="w75"></div>
+            <div><img src="assets/obstacles/glasses.png" alt="" class="w25"></div>
+            <div><img src="assets/obstacles/large.png" alt="" class="w75"></div>
+        </div>
+
+        <div class="large-dishes">
+            <div><img src="assets/obstacles/dishes.png" alt="" class="w50"></div>
+            <div><img src="assets/obstacles/glasses.png" alt="" class="w25"></div>
+            <div><img src="assets/obstacles/large.png" alt="" class="w75"></div>
+            <div><img src="assets/obstacles/glass.png" alt="" class="w18"></div>
+            <div><img src="assets/obstacles/oil.png" alt="" class="w25"></div>
+        </div>
     </div>
 </body>
 
