--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div id="message">
                 <h2>Pigeon Runner</h2>
                 <p>Tu es un jeune pigeon qui découvre le campus ACEF</p>
-                <p>Attention d'éviter la vaisselle salle... <br> et le fantôme de Chester</p>
+                <p>Attention d'éviter la vaisselle salle... <br> et le fantôme volant de Chester</p>
             </div>
         </div>
     </div>
